# c-cpp-srt-client

./: build_srt.sh  config_libs.sh  main.c  mips-toolchain.cmake  out
_openssl/open_ssl_static_lib/include/openssl/: opensslconf.h
_openssl/openssl-1.1.1w/: Makefile  configdata.pm  libcrypto.pc  libssl.pc  openssl.pc
_openssl/openssl-1.1.1w/apps/: openssl
_openssl/openssl-1.1.1w/crypto/: buildinf.h
_openssl/openssl-1.1.1w/fuzz/: asn1-test  asn1parse-test  bignum-test  bndiv-test  client-test  cms-test  conf-test  crl-test  ct-test  server-test  x509-test
_openssl/openssl-1.1.1w/test/: aborttest  afalgtest  asn1_decode_test  asn1_encode_test  asn1_internal_test  asn1_string_table_test  asn1_time_test  asynciotest  asynctest  bad_dtls_test  bftest  bio_callback_test  bio_enc_test  bio_memleak_test  bioprinttest  bntest  buildtest_c_aes  buildtest_c_asn1  buildtest_c_asn1t  buildtest_c_bio  buildtest_c_blowfish  buildtest_c_bn  buildtest_c_buffer  buildtest_c_camellia  buildtest_c_cast  buildtest_c_cmac  buildtest_c_cms  buildtest_c_comp  buildtest_c_conf  buildtest_c_conf_api  buildtest_c_crypto  buildtest_c_ct  buildtest_c_des  buildtest_c_dh  buildtest_c_dsa  buildtest_c_dtls1  buildtest_c_e_os2  buildtest_c_ebcdic  buildtest_c_ec  buildtest_c_ecdh  (+139 more)
_srt/srt_static_lib/lib/pkgconfig/: haisrt.pc
srt_server_fun/: CMakeLists.txt  CustomAACSubsession.hh  CustomH264Subsession.hh  main.cpp  srt_serv.cpp
